# rbf_polytope

./: .gitignore  README.md  pyproject.toml  requirements.txt
examples/Lorenz/: identification.py  observer.py
examples/Polytope/: Polytope.npz  continuous.py  continuous_input.py  discrete.py  discrete_input.py  model.npz
rbf_polytope/: __init__.py
rbf_polytope/identification/: __init__.py  selection.py  train.py
rbf_polytope/identification/vertices/: __init__.py  base.py  infinite_norm.py  least_squares.py  stable_infinite_norm.py  stable_least_squares.py
rbf_polytope/identification/widths/: __init__.py  base.py  constant.py  gradient_descent.py
rbf_polytope/model/: __init__.py  prediction.py  simulation.py
rbf_polytope/utils/: __init__.py  matrix.py  plot_weights.py  rbf_functions.py  saving.py
test/: test.py
utils/: __init__.py  odes.py  simulation.py
