[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rbf_polytope"
version = "0.1.0"
description = """
Radial Basis Function (RBF) Polytope Identification and Control Tools
"""
authors = [{ name = "Alessandrini Antoine", email = "a.alsdrini@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = ["cvxpy", "matplotlib", "mosek", "numpy"]

[tool.setuptools.packages.find]
where = ["."]
